# AudioPlayer

./: .gitignore  CMakeLists.txt  README.md
include/: app.hpp
include/audio/: audio_backend.hpp  audio_file.hpp  audio_player.hpp
include/audio/backend/: portaudio_backend.hpp
include/audio/files/: wav_file.hpp
include/sounds/: sound.hpp  sound_backend.hpp  sound_buffer.hpp  sound_file.hpp  sound_player.hpp  sound_processor.hpp
include/sounds/backends/: portaudio_backend.hpp
include/sounds/maths/: commons.hpp  complex.hpp  fourier.hpp
include/sounds/music/: pitch.hpp
include/sounds/players/: sound_files_player.hpp
include/sounds/processors/: amplifier.hpp  delay.hpp  echo.hpp  equalizer.hpp  fir_filter.hpp  varying_amplifier.hpp
include/sounds/sounds/files/: mp3_file.hpp  wav_file.hpp
include/sounds/sounds/synth/: pitched_sound.hpp  sound_sequence.hpp
include/sounds/sounds/synth/basic/: fourier_wave.hpp  pitched_sound.hpp  sine_wave.hpp
include/ui/: main_view.hpp  main_window.hpp  qt_view.hpp  stylesheets.hpp
include/ui/helpers/: strings_helper.hpp
include/ui/views/: menu_view.hpp  player_view.hpp  sidebar_view.hpp
include/ui/views/player/: controls_view.hpp  effects_view.hpp  queue_view.hpp  visualizers_view.hpp
include/ui/views/player/effects/: echo_view.hpp  equalizer_view.hpp
include/ui/views/player/visualizers/: signal_wave_view.hpp  spectrum_view.hpp  temporal_signal_view.hpp
include/ui/views/sidebar/: file_view.hpp  queue_view.hpp
lib/openmp3/: CMakeLists.txt
lib/openmp3/include/: openmp3.h
lib/openmp3/src/: decoder.cpp  huffman.cpp  huffman.h  iterator.cpp  requantize.cpp  requantize.h  stereo.cpp  stereo.h  synthesis.cpp  synthesis.h  tables.cpp  tables.h  types.h
lib/portaudio/: CMakeLists.txt
src/: app.cpp  main.cpp
src/audio/: audio_file.cpp  audio_player.cpp
src/audio/backend/: portaudio_backend.cpp
src/audio/files/: wav_file.cpp
src/sounds/: sound_file.cpp  sound_player.cpp
src/sounds/backends/: portaudio_backend.cpp
src/sounds/maths/: complex.cpp  fourier.cpp
src/sounds/music/: pitch.cpp
src/sounds/players/: sound_files_player.cpp
src/sounds/processors/: amplifier.cpp  delay.cpp  echo.cpp  equalizer.cpp  fir_filter.cpp  varying_amplifier.cpp
src/sounds/sounds/files/: mp3_file.cpp  wav_file.cpp
src/sounds/sounds/synth/basic/: fourier_wave.cpp  sine_wave.cpp
src/ui/: main_view.cpp  main_window.cpp
src/ui/helpers/: strings_helper.cpp
src/ui/views/: menu_view.cpp  player_view.cpp
src/ui/views/player/: controls_view.cpp  effects_view.cpp  queue_view.cpp  visualizers_view.cpp
src/ui/views/player/effects/: echo_view.cpp  equalizer_view.cpp
src/ui/views/player/visualizers/: spectrum_view.cpp  temporal_signal_view.cpp
src/ui/views/sidebar/: file_view.cpp  queue_view.cpp
